--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <title>FsmsApp</title>
   <base href="/">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css"
+    type="text/css">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
